# RAG-Blueprint

./: .ansible-lint  .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ansible-lint.yml
data-ingestion/: ingest-workflow.ipynb  rag_pipeline_llamastack.md  workflow.ipynb
data-ingestion-pipeline/: workflow.ipynb
deploy/helm/: Makefile  deploy.sh
deploy/local/: Makefile
docs/: local_setup_guide.md  post_installation.md  rag-reference-architecture.md
frontend/: Containerfile  pyproject.toml  requirements.txt  start.sh
frontend/llama_stack/: __init__.py
frontend/llama_stack/distribution/ui/: app.py
frontend/llama_stack/distribution/ui/modules/: api.py  utils.py
frontend/llama_stack/distribution/ui/page/distribution/: datasets.py  eval_tasks.py  inspect.py  models.py  providers.py  scoring_functions.py  shields.py  vector_dbs.py
frontend/llama_stack/distribution/ui/page/evaluations/: app_eval.py  evaluations.py  native_eval.py
frontend/llama_stack/distribution/ui/page/playground/: chat.py  upload.py
frontend/llama_stack_ui/modules/: api.py
frontend/llama_stack_ui/page/distribution/: datasets.py  eval_tasks.py  models.py  providers.py  resources.py  scoring_functions.py  shields.py  vector_dbs.py
frontend/llama_stack_ui/page/evaluations/: app_eval.py  native_eval.py
frontend/llama_stack_ui/page/playground/: chat.py  rag.py  tools.py
modelcars/: Containerfile
notebooks/: data-ingestion-pipeline.ipynb  query_pgvector.ipynb  query_vectordb.py
script/: data-ingestion-pipeline.ipynb
shields/: list-shields.py  register-shield.py  test-shield.py
ui/: Containerfile  app.py  mcp_servers_config.yaml  requirements.txt
ui/modules/: api.py  (+1 more)
(+94 files in other folders)
